# ProtonPlus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .vala-lint.conf  .valalintignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  com.vysp3r.ProtonPlus.local.yml  com.vysp3r.ProtonPlus.yml  meson.build
.github/: pull_request_template.md
data/: com.vysp3r.ProtonPlus.desktop.in  com.vysp3r.ProtonPlus.gresource.xml  com.vysp3r.ProtonPlus.gschema.xml  com.vysp3r.ProtonPlus.metainfo.xml.in  meson.build  protonplus.service  protonplus.timer  runners.json
po/: LINGUAS  POTFILES  ar.po  be.po  bs.po  com.vysp3r.ProtonPlus.pot  cs.po  de.po  el.po  es.po  fi.po  fr.po  hr.po  id.po  it.po  ja.po  ka.po  meson.build  nl.po  pl.po  pt.po  ru.po  sk.po  sr@latin.po  sv.po  uk.po  vi.po  zh_CN.po  zh_TW.po
scripts/: build.sh  get-dependencies.sh  make-appimage.sh  set-version.py
src/: main.vala  (+3 more)
src/utils/: archive-helper.vala  cache-manager.vala  controller-manager.vala  download-manager.vala  filesystem.vala  i18n.vala  mangohud-manager.vala  meson.build  metadata.vala  parser.vala  system.vala  theme-manager.vala  vdf-parser.vala  web.vala
src/utils/internal/: meson.build  metainfo-loader.vala
src/utils/requests/: meson.build  proton-plus.vala  proxy.vala  request.vala
src/utils/vdf/: binary.vala  meson.build  node.vala  shortcut.vala  vdf-parser.vala
tests/: filesystem_test.vala  main.vala  meson.build  metadata_test.vala  parser_test.vala  scripts_test.py  vdf_binary_test.vala
tests/models/internal/data/runner/: parser_test.vala
(+168 files in other folders)
