sources += files(
    'archive-helper.vala',
    'filesystem.vala',
    'web.vala',
    'parser.vala',
    'metadata.vala',
    'system.vala',
    'i18n.vala',
    'controller-manager.vala',
    'theme-manager.vala',
    'download-manager.vala',
    'mangohud-manager.vala',
    'cache-manager.vala',
)

subdir('internal')
subdir('requests')
subdir('vdf')
